# Forge

./: .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml
.cargo/: audit-policy.json  config.toml
.github/workflows/: conditional-gate.yml  phase0-ci.yml  phase2-allocator-matrix.yml  phase4-confidential-gate.yml  repo-policy.yml
crates/control_plane/: Cargo.toml
crates/control_plane/src/: agent_orchestrator.rs  benchmark.rs  env_config.rs  extension_host.rs  feature_policy.rs  io_policy.rs  lib.rs  lmdb_metadata.rs  mcp_bridge.rs  project_memory.rs  scheduler.rs  skill_sandbox.rs
crates/execution_plane/: Cargo.toml
crates/execution_plane/src/: allocator_build.rs  benchmark.rs  io_path.rs  lib.rs
crates/forge_security/: Cargo.toml
crates/forge_security/src/: broker.rs  command_guard.rs  env_config.rs  lib.rs  process_hardening.rs
crates/runtime_registry/: Cargo.toml
crates/runtime_registry/src/: allocator_build.rs  confidential_relay.rs  data_governance.rs  env_config.rs  incident_response_quarantine.rs  io_routing.rs  lib.rs  local_api_hardening.rs  model_provider_trust_policy.rs  openjarvis_bridge.rs  openjarvis_mode_b.rs  provider_adapter.rs  source_registry.rs  vulkan_memory.rs
crates/ui_shell/: Cargo.toml  build.rs
crates/ui_shell/src/: api.rs  app.rs  lib.rs  main.rs  theme.rs
crates/ui_shell/src/app/: feature_policy_gate.rs  panel_agent.rs  panel_chat.rs  panel_code.rs  panel_inspector.rs  panel_jobs_bottom.rs  panel_media.rs  panel_model.rs  panel_settings.rs  runtime_state_helpers.rs  shell_core.rs  tests.rs
crates/urm/: Cargo.toml  build.rs
crates/urm/src/: allocator_policy.rs  feature_policy.rs  io_policy.rs  lib.rs  lmdb_metadata.rs  topology.rs  vulkan_memory.rs
demo-project/: README.md  app.js
docs/: FORGE_CRYPTO_DESIGN_NOTE.md
scripts/: activate_llama_runtime.ps1  allocator_benchmark.ps1  argon2id_benchmark_report_check.ps1  artifact_supply_chain_integrity_check.ps1  boot_host_integrity_check.ps1  bootstrap_env.ps1  broker_audit_export_check.ps1  broker_nonce_uniqueness_check.ps1  coding_standard_audit.ps1  conditional_adoption_gate.ps1  coredump_profile_scan.ps1  crypto_design_note_check.ps1  dangerous_action_reauth_check.ps1  dangerous_full_access_mode_check.ps1  data_governance_egress_check.ps1  deep_linux_sandbox_profile_check.ps1  download_llama_cpp_release_matrix.ps1  evidence_manifest_integrity_check.ps1  forensic_reset_quarantine_drill_check.ps1  incident_response_quarantine_check.ps1  kek_custody_matrix_check.ps1  linux_integrity_enforcement_check.ps1  model_provider_trust_policy_check.ps1  p0_acceptance_evidence_bundle.ps1  path_guard.ps1  phase2_adoption_gate.ps1  phase4_confidential_adoption_gate.ps1  policy_integrity_continuous_monitor.ps1  policy_integrity_drift_check.ps1  process_cmdline_secret_scan.ps1  process_dumpability_scan.ps1  provider_audit_export_check.ps1  relay_adversarial_corpus_check.ps1  relay_adversarial_regression_check.ps1  relay_attack_corpus_maintenance_check.ps1  relay_attestation_report_check.ps1  relay_green_regression_suite_check.ps1  release_candidate_secret_leak_check.ps1  release_security_regression_block_check.ps1  run_audit.py  (+44 more)
scripts/fixtures/relay_adversarial_corpus/: cache_poisoning_replay_payload.json  manifest.json  memory_poisoning_session_patch.json  prompt_injection_directive_override.md  relay_fallback_abuse_prompt.md  secret_leak_exfil_prompt.txt  telemetry_leak_marker_payload.json  token_confusion_cross_audience.json  workspace_traversal_payload.txt
