[package]
name = "control_plane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
urm = { path = "../urm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
