[package]
name = "forge_security"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
argon2 = { version = "0.5.3", default-features = false, features = ["std"] }
base64 = "0.22.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
