[package]
name = "ui_shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
control_plane = { path = "../control_plane" }
execution_plane = { path = "../execution_plane" }
runtime_registry = { path = "../runtime_registry" }
forge_security = { path = "../forge_security" }
urm = { path = "../urm" }
floem = { git = "https://github.com/lapce/floem", rev = "14fa7e912f62a921301af4445c1472d7770e2220", default-features = false, features = ["vger", "editor"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"
